<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sv_detail_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.movies.DetailMovieActivity">

...
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.github.siyamed.shapeimageview.RoundedImageView
                android:id="@+id/riv_item_poster_received"
                android:layout_width="180dp"
                android:layout_height="280dp"
                android:src="@drawable/ic_drawable_poster"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:siRadius="8dp" />

            <TextView
                android:id="@+id/tv_item_movie_name_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/movie_name"
                android:textColor="@color/white"
...
                android:contentDescription="@string/year_icon"
                android:src="@drawable/ic_baseline_calendar_today_24"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_movie_name_received" />

            <TextView
                android:id="@+id/tv_item_year_received"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/year"
                android:textColor="@color/white"
                android:textSize="18sp"
...
                android:text="@string/genres"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toBottomOf="@+id/iv_item_year" />

            <TextView
                android:id="@+id/tv_item_genre_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="4dp"
                android:text="@string/genre_items"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/riv_item_poster_received"
                app:layout_constraintTop_toBottomOf="@+id/tv_genre" />

            <TextView
                android:id="@+id/tv_item_tagLine_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/tag_line"
                android:textColor="@color/tagColor"
...
                        android:text="@string/score"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_item_score_received"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/score_item"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/tv_score" />

                    <TextView
                        android:id="@+id/tv_percent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/percent"
                        android:textColor="@color/white"
                        android:layout_marginStart="4dp"
                        android:textSize="14sp"
...
                        android:text="@string/release_date"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_item_release_received"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/release_date"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
...
                        android:text="@string/duration"
                        android:textColor="@color/white"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/tv_item_duration_received"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/duration_item"
                        android:textColor="@color/white"
                        android:textSize="14sp"
                        android:textStyle="bold"
...
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_item_overview_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/overview_item"
                android:textColor="@color/black"
                android:justificationMode="inter_word"
...
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_item_overview_received" />

            <TextView
                android:id="@+id/tv_item_person_received"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="8dp"
                android:text="@string/persons_item"
                android:textColor="@color/black"
...
